--- a/index.html
+++ b/index.html
@@ -19,4 +19,12 @@
 
   </div>
  </body>
+ <script type="text/javascript">
+   $(document).ready(function) (){
+    $('#calculate').click(function(){
+
+  
+   });
+ </script>
+
 </html>
