--- a/SpecRunner.html
+++ b/SpecRunner.html
@@ -23,7 +23,12 @@
   <!-- include spec files here... -->
   <script src="spec/SpecHelper.js"></script>
   <script src="spec/person_spec.js"></script>
+  <script src="spec/bmi_ui_spec.js"></script>
+  <script src="spec/bmi_calculator_spec.js"></script>
 
+  </script>
+
+  </script>
 </head>
 
 <body>
